test/corpus/comment.txt
================================================================================
comment
================================================================================
label1:
    MOV R0, #42     ;dcomment2   
    mov r0, #1234   ;sada      
--------------------------------------------------------------------------------
(program
      (label
        (identifier))
      (instruction
        (identifier)
        (identifier)
        (int))
      (comment)
      (instruction
        (identifier)
        (identifier)
        (int))
      (comment))
